fix: add some padding to avoid overlaps

--- a/src/renderer/src/pages/Home/Home.module.css
+++ b/src/renderer/src/pages/Home/Home.module.css
@@ -87,6 +87,10 @@
   gap: 8px;
 }
 
+.actions .list .action .description {
+  margin-right: 60px;
+}
+
 .actions .list .action .toggle {
   position: absolute;
   top: 15px;
